[tool.poetry]
name = "CAI"
version = "0.1.0"
description = ""
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cscs181/CAI"
repository = "https://github.com/cscs181/CAI"
documentation = "https://github.com/cscs181/CAI#readme"
keywords = ["qq", "mirai", "cqhttp"]
classifiers = ["Framework :: Robot Framework", "Programming Language :: Python :: 3"]
include = ["cai/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
rtea = "^0.3.0"
jcestruct = "^0.1.0"
protobuf = "^3.14.0"
cryptography = "^3.4.1"
yapf = { version = "^0.30.0", optional = true }
pillow = { version = "^8.1.0", optional = true }
sphinx = { version = "^3.4.3", optional = true }
mypy-protobuf = { version = "^2.4", optional = true }
recommonmark = { version = "^0.7.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.1", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }


[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pillow = "^8.1.0"
sphinx = "^3.4.3"
mypy-protobuf = "^2.4"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.extras]
dev = ["yapf", "pillow", "sphinx", "mypy-protobuf", "recommonmark", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
