[tool.poetry]
name = "CAI"
version = "0.1.0"
description = ""
authors = ["yanyongyu <yanyongyu_1@126.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/cscs181/CAI"
repository = "https://github.com/cscs181/CAI"
documentation = "https://github.com/cscs181/CAI#readme"
keywords = ["qq", "mirai", "cqhttp"]
classifiers = ["Framework :: Robot Framework", "Programming Language :: Python :: 3"]
include = ["cai/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
rtea = "^0.3.0"
jcestruct = "^0.1.0"
protobuf = "^3.14.0"
cachetools = "^4.2.2"
cryptography = "^3.4.1"
typing-extensions = ">=3.10.0,<5.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
pillow = "^8.1.0"
sphinx = "^4.1.0"
mypy-protobuf = "^2.4"
sphinx-rtd-theme = "^0.5.1"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-napoleon = "^0.7"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# default = true

[tool.black]
line-length = 80
extend-exclude = '''
^/cai/pb/
'''

[tool.isort]
profile = "black"
line_length = 80
length_sort = true
extend_skip = "cai/pb"
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = "typing_extensions"

[tool.pyright]
ignore = [".vscode/*.py", "**/site-packages/**/*.py", "cai/pb/**/*_pb2.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
